--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Patua+One|Permanent+Marker" rel="stylesheet">
   <title>vue-music-checkpoint</title>
 </head>
 
-<body>
+<body style="background-image: url(https://webdesignerdepot.s3.amazonaws.com/default-images/14.jpg);">
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
