--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <title>vue-music-checkpoint</title>
 </head>
 
-<body style="background-image: url(https://webdesignerdepot.s3.amazonaws.com/default-images/14.jpg);">
+<body style="background-image: url(https://wallpapercave.com/wp/bsxa3BA.jpg);">
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
